--- a/.github/workflows/Build_X86_64[immortalwrt].yml
+++ b/.github/workflows/Build_X86_64[immortalwrt].yml
@@ -15,17 +15,14 @@ on:
         required: false
         default: 'false'
       checkupdatesD:
-        description: 'CheckupdatesD connection to Actions'
+        description: 'Checkupdates Docker connection to Actions'
         required: false
         default: 'false'
       ssh:
         description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
-      sshD:
-        description: 'SSHD connection to Actions'
-        required: false
-        default: 'false'
+        required: true
+        default: false
+        type: boolean'
       toolchain:
         description: '使用toolchain缓存'
         required: false
@@ -69,10 +66,12 @@ jobs:
         cd $REPO_PATH_immo
         echo "commitHash_x86_64_immo=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
         cd
+        
     - name: Show Commit Head and Combination Heads
       id: combHeader
       run: |
         echo "commitHash_x86_64_immo: ${{ steps.getHash.outputs.commitHash_x86_64_immo }}"
+        
     - name: Compare Commit Hash
       id: cacheHash
       uses: actions/cache@main
@@ -314,10 +313,10 @@ jobs:
         cd openwrt
         make defconfig
         if [[ "${CANCEL_TOOLCHAIN}" == "true" ]]; then
-           echo -e "当前正常编译"
+           echo -e "\e[1;31m当前正常编译...\e[0m"
            make download -j$(nproc)
         else
-           echo -e "当前调用toolchain缓存文件"
+           echo -e "\e[1;31m当前使用toolchain缓存文件...\e[0m"
            make package/download -j$(nproc)
         fi
         find dl -size -1024c -exec ls -l {} \;
@@ -395,7 +394,7 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[ImmortalWrt] 」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[ImmortalWrt]固件
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.TAG }}_immo_${{ env.KERNEL }}
@@ -622,10 +621,10 @@ jobs:
         cd openwrt
         make defconfig
         if [[ "${CANCEL_TOOLCHAIN}" == "true" ]]; then
-           echo -e "当前正常编译"
+           echo -e "\e[1;31m当前正常编译...\e[0m"
            make download -j$(nproc)
         else
-           echo -e "当前调用toolchain缓存文件"
+           echo -e "\e[1;31m当前使用toolchain缓存文件...\e[0m"
            make package/download -j$(nproc)
         fi
         find dl -size -1024c -exec ls -l {} \;
@@ -703,7 +702,7 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[ImmortalWrt-Docker] 」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[ImmortalWrt-Docker]固件
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.TAG }}_immoD_${{ env.KERNEL }}
