--- a/.github/workflows/Build_X86_64-Lede_1806.yml
+++ b/.github/workflows/Build_X86_64-Lede_1806.yml
@@ -1,10 +1,10 @@
 #===============================================
-# Description: X86_64
+# Description: X86_64-Lede_1806
 # Lisence: MIT
 # By：Jejz
 #===============================================
 
-name: Build_x86_64
+name: Build_x86_64-Lede_1806
 
 on:
   repository_dispatch:
