--- a/.github/workflows/Build_X86_64[Lede_1806_Docker].yml
+++ b/.github/workflows/Build_X86_64[Lede_1806_Docker].yml
@@ -1,10 +1,10 @@
 #===============================================
-# Description: X86_64
+# Description: X86_64[Lede_1806_Docker]
 # Lisence: MIT
 # By：Jejz
 #===============================================
 
-name: Build_x86_64[Docker]
+name: Build_x86_64[[Lede_1806_Docker]]
 
 on:
   repository_dispatch:
