Update and rename Build_X86_64[immortalwrt].yml to Build_X86_64[ImmortalWrt].yml

--- a/.github/workflows/Build_X86_64[ImmortalWrt].yml
+++ b/.github/workflows/Build_X86_64[ImmortalWrt].yml
@@ -1,10 +1,10 @@
 #===============================================
-# Description: X86_64
+# Description: X86_64[ImmortalWrt]
 # Lisence: MIT
 # By：Jejz
 #===============================================
 
-name: Build_x86_64[immortalwrt]
+name: Build_x86_64[ImmortalWrt]
 
 on:
   repository_dispatch:
