--- a/.github/workflows/Build_X86_64[OpenWrt].yml
+++ b/.github/workflows/Build_X86_64[OpenWrt].yml
@@ -1,10 +1,10 @@
 #===============================================
-# Description: X86_64
+# Description: X86_64[OpenWrt]
 # Lisence: MIT
 # By：Jejz
 #===============================================
 
-name: Build_x86_64[openwrt]
+name: Build_x86_64[OpenWrt]
 
 on:
   repository_dispatch:
