Update and rename ARMv8-ImmortalWrt.yml to ARMv8[ImmortalWrt].yml

--- a/.github/workflows/ARMv8[ImmortalWrt].yml
+++ b/.github/workflows/ARMv8[ImmortalWrt].yml
@@ -1,10 +1,10 @@
 #===============================================
-# Description: ARMv8-ImmortalWrt
+# Description: ARMv8[ImmortalWrt]
 # Lisence: MIT
 # By：Jejz
 #===============================================
 
-name: ARMv8-ImmortalWrt快速打包
+name: ARMv8[ImmortalWrt]快速打包
 
 on:
   repository_dispatch:
