Update and rename ARMv8-Lede.yml to ARMv8[Lede].yml

--- a/.github/workflows/ARMv8[Lede].yml
+++ b/.github/workflows/ARMv8[Lede].yml
@@ -1,10 +1,10 @@
 #===============================================
-# Description: ARMv8-Lede
+# Description: ARMv8[Lede]
 # Lisence: MIT
 # By：Jejz
 #===============================================
 
-name: ARMv8-Lede快速打包
+name: ARMv8[Lede]快速打包
 
 on:
   repository_dispatch:
