--- a/.github/workflows/Build_X86_64-Lede_1806_Docker.yml
+++ b/.github/workflows/Build_X86_64-Lede_1806_Docker.yml
@@ -4,7 +4,7 @@
 # By：Jejz
 #===============================================
 
-name: Build_x86_64[[Lede_1806_Docker]]
+name: Build_x86_64[Lede_1806_Docker]
 
 on:
   repository_dispatch:
