--- a/.github/workflows/lede-config.yml
+++ b/.github/workflows/lede-config.yml
@@ -21,7 +21,8 @@ on:
       ssh:
         description: 'SSH connection to Actions'
         required: false
-        default: 'false'
+        default: true
+        type: boolean'
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
