--- a/.github/workflows/immo-config.yml
+++ b/.github/workflows/immo-config.yml
@@ -17,7 +17,8 @@ on:
       ssh:
         description: 'SSH connection to Actions'
         required: false
-        default: 'false'
+        default: true
+        type: boolean'
 
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt
