--- a/.github/workflows/Build_X86_64-Lede_1806.yml
+++ b/.github/workflows/Build_X86_64-Lede_1806.yml
@@ -38,7 +38,7 @@ on:
         description: 'SSH connection to Actions'
         required: true
         default: false
-        type: boolean'
+        type: boolean
       toolchain:
         description: '使用toolchain缓存'
         required: false
