--- a/.github/workflows/Build_X86_64-Lede_1806个人双开版.yml
+++ b/.github/workflows/Build_X86_64-Lede_1806个人双开版.yml
@@ -26,7 +26,7 @@ on:
         description: 'SSH connection to Actions'
         required: true
         default: false
-        type: boolean'
+        type: boolean
       toolchain:
         description: '使用toolchain缓存'
         required: false
