--- a/.github/workflows/immo-config.yml
+++ b/.github/workflows/immo-config.yml
@@ -18,7 +18,7 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: true
-        type: boolean'
+        type: boolean
 
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt
