--- a/.github/workflows/Build_X86_64-Lede个人双开版.yml
+++ b/.github/workflows/Build_X86_64-Lede个人双开版.yml
@@ -12,8 +12,9 @@ on:
     inputs:
       checkupdates515:
         description: 'Checkupdates515 connection to Actions'
-        required: false
-        default: 'false'
+        required: true
+        default: false
+        type: boolean
       ssh:
         description: 'SSH connection to Actions'
         required: true
